# Dynamic_Drop_Simulation

./: CMakeLists.txt  README.md  thinking.txt
data/: example.txt  init.txt
src/: CMakeLists.txt  Dynamic_Drop.cpp
src/Reader/: Reader.cpp
